# OptimizeSDF

./: .gitignore  CMakeLists.txt  ClipSpaceConversion.cpp  ClipSpaceConversion.hpp  Matrix.cpp  Matrix.cu  Matrix.cuh  Matrix.h  MatrixMemoryManager.cpp  MatrixMemoryManager.cu  MatrixMemoryManager.cuh  MatrixMemoryManager.h  MatrixUtils.cpp  MatrixUtils.cuh  Model.cpp  Model.h  ModelHelper.cu  ModelHelperBackup4.cu  README.md  autoInstall.sh  cal_sdf.py  main.cu  mathHelper.cpp  mathHelper.cu  testSDFGPU.py
Core/: ClipSpaceConversion.hpp  Helper.hpp  MathHelper.cu  Matrix.cu  Matrix.cuh  MatrixMemoryManager.cu  MatrixMemoryManager.cuh  MatrixUtils.cuh  Model.cu  Model.cuh  ModelHelper.cu
Model/: 112_pymeshlab.sdf  118_pymeshlab.sdf  158_pymeshlab.sdf  181_pymeshlab.sdf  360_pymeshlab.sdf  368_pymeshlab.sdf  369_pymeshlab.sdf  371_pymeshlab.sdf  400_pymeshlab.sdf  76_pymeshlab.sdf  9_pymeshlab.sdf  Leaf_pymeshlab.sdf
NormalSDFOptix/: NormalSDFAnalystOPtix  SDFMain.cpp  SDFOptix.cu
Visualization/3DHTML/: BVH.html  NormalCaculation.html  SampleCone.html
fast_robust_sdf/: .gitignore  CMakeLists.txt  main.cpp  sdf_offset.cpp  sdf_offset.h
latex/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  cover.tex  cover_page.tex
src/: Compare.hpp
src/OpenCL/: interface.cpp  octree.hpp
src/Optix/: OptixHostUtils.cuh  OptixRunner.cuh  SDFKernels.cuh  SDFOptix.cu  changeMemoryLayout.cu  interface.cu
